# learn-webassembly

./: .editorconfig  .gitignore  README.md
chapter-03-dev-env/: index.html  stuff.html
chapter-05-create-load-module/: custom-loading.html  without-glue.html
chapter-06-interact-with-js/: Makefile  js-with-glue.html  js-without-glue.html
chapter-07-cook-the-books/: Makefile  README.md  package-lock.json  package.json
chapter-07-cook-the-books/config/: db.json
chapter-07-cook-the-books/src/: index.html  main.js
chapter-08-tetris/output-native/: CMakeLists.txt  README.md
chapter-09-node/testing-example/: package-lock.json
chapter-09-node/webpack-example/: package-lock.json
chapter-10-advanced-tools/compile-with-llvm/: main.cpp
chapter-10-advanced-tools/parallel-wasm/: Makefile
chapter-3-dev-env/: index.html
chapter-3-dev-env/server-test/: stuff.html
chapter-4-installing-deps/: Makefile
chapter-4-installing-deps/compiler-test/: Makefile  main.wasm
chapter-5-create-load-module/: Makefile  custom-loading.html  no-glue.c  no-glue.html  sdl-example-wasm.html  sdl-example2.html  without-glue.html
chapter-6-interact-with-js/: Makefile  js-no-glue.cpp  js-no-glue.html  js-with-glue.c  js-with-glue.html  js-without-glue.html
chapter-7-cook-the-books/: Makefile  package.json
chapter-8-tetris/: CMakeLists.txt  package-lock.json  package.json
chapter-8-tetris/output-wasm/: CMakeLists.txt  Makefile
chapter-8-tetris/output-wasm/public/: index.html
chapter-8-tetris/output-wasm/src/: board.cpp  piece.cpp
common/: load-wasm.js
(+17 files in other folders)
